--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@ricky0123/vad-web": "^0.0.24",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.511.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.45.0",
     "next": "latest",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
